// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should render correctly with all the props given 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 200;
  color: pink;
  margin: 0px 0px 8px 0px;
  cursor: pointer;
}

.c0::after {
  color: red;
  content: ' *';
}

<div>
  <label
    class="c0"
    required=""
  >
    Demo Label
  </label>
</div>
`;

exports[`Label component should render correctly with default props 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 8px 0px 0px;
}

<div>
  <label
    class="c0"
  >
    Label
  </label>
</div>
`;
